# jg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.md
doc/: jg_assembly.md  jg_mock_evolution_slides.md  jgmock_evolution_slides.md
inc/: jg_algorithm.h  jg_args.h  jg_benchmark.h  jg_callable_traits.h  jg_flags.h  jg_logging_allocator.h  jg_mock.h  jg_optional.h  jg_os.h  jg_ostream_color.h  jg_ostream_color_scope.h  jg_simple_logger.h  jg_source_location.h  jg_span.h  jg_stacktrace.h  jg_state_scope.h  jg_stopwatch.h  jg_string.h  jg_test.h  jg_verify.h
samples/: CMakeLists.txt  jg_args.cpp  jg_flags.cpp  jg_logging_allocator.cpp  jg_simple_logger.cpp  jg_span.cpp  jg_stacktrace.cpp  jg_string.cpp
snippets/: check size.md
tests/: args_tests.cpp  catch_main.cpp  jg_args_tests.cpp  jg_optional_tests.cpp  jg_string_tests.cpp  main.cpp  mock_tests.cpp  optional_tests.cpp  simple_logger_tests.cpp  string_tests.cpp  test_helpers.h  tests_main.cpp
